library/src/libqxmlstream.h

typedef struct QIODevice QIODevice;
typedef struct QXmlStreamAttribute QXmlStreamAttribute;
typedef struct QXmlStreamReader QXmlStreamReader;
typedef struct QXmlStreamWriter QXmlStreamWriter;
QTLIBC_API QXmlStreamWriter* QXmlStreamWriter_new();
QTLIBC_API QXmlStreamWriter* QXmlStreamWriter_new2(QIODevice* device);
QTLIBC_API void QXmlStreamWriter_SetDevice(QXmlStreamWriter* self, QIODevice* device);
QTLIBC_API QIODevice* QXmlStreamWriter_Device(const QXmlStreamWriter* self);
QTLIBC_API void QXmlStreamWriter_SetAutoFormatting(QXmlStreamWriter* self, bool autoFormatting);
QTLIBC_API bool QXmlStreamWriter_AutoFormatting(const QXmlStreamWriter* self);
QTLIBC_API void QXmlStreamWriter_SetAutoFormattingIndent(QXmlStreamWriter* self, int spacesOrTabs);
QTLIBC_API int QXmlStreamWriter_AutoFormattingIndent(const QXmlStreamWriter* self);
QTLIBC_API void QXmlStreamWriter_WriteAttribute(QXmlStreamWriter* self, libqt_string qualifiedName, libqt_string value);
QTLIBC_API void QXmlStreamWriter_WriteAttribute2(QXmlStreamWriter* self, libqt_string namespaceUri, libqt_string name, libqt_string value);
QTLIBC_API void QXmlStreamWriter_WriteAttributeWithAttribute(QXmlStreamWriter* self, QXmlStreamAttribute* attribute);
QTLIBC_API void QXmlStreamWriter_WriteCDATA(QXmlStreamWriter* self, libqt_string text);
QTLIBC_API void QXmlStreamWriter_WriteCharacters(QXmlStreamWriter* self, libqt_string text);
QTLIBC_API void QXmlStreamWriter_WriteComment(QXmlStreamWriter* self, libqt_string text);
QTLIBC_API void QXmlStreamWriter_WriteDTD(QXmlStreamWriter* self, libqt_string dtd);
QTLIBC_API void QXmlStreamWriter_WriteEmptyElement(QXmlStreamWriter* self, libqt_string qualifiedName);
QTLIBC_API void QXmlStreamWriter_WriteEmptyElement2(QXmlStreamWriter* self, libqt_string namespaceUri, libqt_string name);
QTLIBC_API void QXmlStreamWriter_WriteTextElement(QXmlStreamWriter* self, libqt_string qualifiedName, libqt_string text);
QTLIBC_API void QXmlStreamWriter_WriteTextElement2(QXmlStreamWriter* self, libqt_string namespaceUri, libqt_string name, libqt_string text);
QTLIBC_API void QXmlStreamWriter_WriteEndDocument(QXmlStreamWriter* self);
QTLIBC_API void QXmlStreamWriter_WriteEndElement(QXmlStreamWriter* self);
QTLIBC_API void QXmlStreamWriter_WriteEntityReference(QXmlStreamWriter* self, libqt_string name);
QTLIBC_API void QXmlStreamWriter_WriteNamespace(QXmlStreamWriter* self, libqt_string namespaceUri);
QTLIBC_API void QXmlStreamWriter_WriteDefaultNamespace(QXmlStreamWriter* self, libqt_string namespaceUri);
QTLIBC_API void QXmlStreamWriter_WriteProcessingInstruction(QXmlStreamWriter* self, libqt_string target);
QTLIBC_API void QXmlStreamWriter_WriteStartDocument(QXmlStreamWriter* self);
QTLIBC_API void QXmlStreamWriter_WriteStartDocumentWithVersion(QXmlStreamWriter* self, libqt_string version);
QTLIBC_API void QXmlStreamWriter_WriteStartDocument2(QXmlStreamWriter* self, libqt_string version, bool standalone);
QTLIBC_API void QXmlStreamWriter_WriteStartElement(QXmlStreamWriter* self, libqt_string qualifiedName);
QTLIBC_API void QXmlStreamWriter_WriteStartElement2(QXmlStreamWriter* self, libqt_string namespaceUri, libqt_string name);
QTLIBC_API void QXmlStreamWriter_WriteCurrentToken(QXmlStreamWriter* self, QXmlStreamReader* reader);
QTLIBC_API bool QXmlStreamWriter_HasError(const QXmlStreamWriter* self);
QTLIBC_API void QXmlStreamWriter_WriteNamespace2(QXmlStreamWriter* self, libqt_string namespaceUri, libqt_string prefix);
QTLIBC_API void QXmlStreamWriter_WriteProcessingInstruction2(QXmlStreamWriter* self, libqt_string target, libqt_string data);